--- a/dev-ruby/sqlite3-ruby/ChangeLog
+++ b/dev-ruby/sqlite3-ruby/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/sqlite3-ruby
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/sqlite3-ruby/Attic/ChangeLog,v 1.58 2012/01/07 07:28:02 graaff Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-ruby/cvs-repo/gentoo-x86/dev-ruby/sqlite3-ruby/Attic/ChangeLog,v 1.59 2012/01/07 08:35:31 graaff Exp $
+
+  07 Jan 2012; Hans de Graaff <graaff@gentoo.org> sqlite3-ruby-1.3.3.ebuild:
+  Drop ruby19 to create a stable candidate.
 
   07 Jan 2012; Hans de Graaff <graaff@gentoo.org> metadata.xml:
   Drop unused swig USE flag.
