--- a/app-crypt/WiRouterKeyRec/ChangeLog
+++ b/app-crypt/WiRouterKeyRec/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/WiRouterKeyRec
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/WiRouterKeyRec/ChangeLog,v 1.21 2012/01/05 16:01:33 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/WiRouterKeyRec/ChangeLog,v 1.22 2012/01/07 12:18:05 hwoarang Exp $
+
+  07 Jan 2012; Markos Chandras <hwoarang@gentoo.org> Manifest:
+  remanifest
 
 *WiRouterKeyRec-1.1.1 (05 Jan 2012)
 
