--- a/media-fonts/sil-doulos/ChangeLog
+++ b/media-fonts/sil-doulos/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-fonts/sil-doulos
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/sil-doulos/ChangeLog,v 1.16 2012/01/07 22:22:31 dirtyepic Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/sil-doulos/ChangeLog,v 1.17 2012/01/07 23:43:23 dirtyepic Exp $
+
+  07 Jan 2012; Ryan Hill <dirtyepic@gentoo.org> sil-doulos-4.110.ebuild:
+  Fix docs installation, only install pdfs w/ USE=doc.
 
   07 Jan 2012; Ryan Hill <dirtyepic@gentoo.org> -sil-doulos-4.100.0.ebuild,
   -sil-doulos-4.104.ebuild, sil-doulos-4.106.ebuild:
