--- a/app-crypt/kstart/ChangeLog
+++ b/app-crypt/kstart/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for app-crypt/kstart
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/kstart/ChangeLog,v 1.13 2012/01/03 14:27:43 eras Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-crypt/cvs-repo/gentoo-x86/app-crypt/kstart/ChangeLog,v 1.14 2012/01/08 08:25:27 eras Exp $
+
+*kstart-4.1 (08 Jan 2012)
+
+  08 Jan 2012; Eray Aslan <eras@gentoo.org> +kstart-4.1.ebuild:
+  version bump
 
 *kstart-4.0 (03 Jan 2012)
 
