--- a/x11-misc/xlockmore/ChangeLog
+++ b/x11-misc/xlockmore/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-misc/xlockmore
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xlockmore/ChangeLog,v 1.98 2012/01/08 14:26:00 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-misc/cvs-repo/gentoo-x86/x11-misc/xlockmore/ChangeLog,v 1.99 2012/01/08 14:27:55 ssuominen Exp $
+
+  08 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> xlockmore-5.31.ebuild,
+  xlockmore-5.37.ebuild:
+  Remove deprecated esound support.
 
   08 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -xlockmore-5.35.ebuild,
   -xlockmore-5.36.ebuild:
