--- a/media-libs/xine-lib/ChangeLog
+++ b/media-libs/xine-lib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/xine-lib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.655 2012/01/05 09:58:08 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.656 2012/01/08 21:02:01 maekke Exp $
+
+  08 Jan 2012; Markus Meier <maekke@gentoo.org> xine-lib-1.1.20.ebuild:
+  arm stable, bug #396521
 
   05 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> -xine-lib-1.2.0.ebuild:
   old
