--- a/net-libs/ptlib/ChangeLog
+++ b/net-libs/ptlib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/ptlib
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/ptlib/ChangeLog,v 1.28 2012/01/04 20:07:00 nirbheek Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/ptlib/ChangeLog,v 1.29 2012/01/09 12:14:19 ago Exp $
+
+  09 Jan 2012; Agostino Sarubbo <ago@gentoo.org> ptlib-2.6.7-r1.ebuild:
+  Stable for AMD64, wrt bug #397617
 
   04 Jan 2012; Nirbheek Chauhan <nirbheek@gentoo.org> ptlib-2.6.7-r1.ebuild:
   Make installation of static libraries optional, reported by ago
