--- a/x11-themes/gtk-engines-xfce/ChangeLog
+++ b/x11-themes/gtk-engines-xfce/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for x11-themes/gtk-engines-xfce
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-engines-xfce/ChangeLog,v 1.129 2012/01/09 13:21:43 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-themes/cvs-repo/gentoo-x86/x11-themes/gtk-engines-xfce/ChangeLog,v 1.130 2012/01/09 13:22:37 ago Exp $
+
+  09 Jan 2012; Agostino Sarubbo <ago@gentoo.org>
+  gtk-engines-xfce-2.99.0-r200.ebuild:
+  Stable for AMD64, wrt bug #397865
 
   09 Jan 2012; Agostino Sarubbo <ago@gentoo.org>
   gtk-engines-xfce-2.99.0-r300.ebuild:
