--- a/media-sound/mp3blaster/ChangeLog
+++ b/media-sound/mp3blaster/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for media-sound/mp3blaster
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mp3blaster/ChangeLog,v 1.51 2012/01/09 17:13:54 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mp3blaster/ChangeLog,v 1.52 2012/01/09 17:34:39 ssuominen Exp $
+
+*mp3blaster-3.2.5-r1 (09 Jan 2012)
+
+  09 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
+  +mp3blaster-3.2.5-r1.ebuild:
+  Import Debian patchset; to fix number of issues ranging from endianess to
+  memory leaks. Upstream seems quiet.
 
   09 Jan 2012; Samuli Suominen <ssuominen@gentoo.org> mp3blaster-3.2.5.ebuild,
   +files/mp3blaster-3.2.5-gcc44.patch:
