--- a/media-plugins/kipi-plugins/ChangeLog
+++ b/media-plugins/kipi-plugins/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-plugins/kipi-plugins
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/kipi-plugins/ChangeLog,v 1.110 2012/01/03 16:13:29 dilfridge Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/kipi-plugins/ChangeLog,v 1.111 2012/01/09 17:58:29 phajdan.jr Exp $
+
+  09 Jan 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org>
+  kipi-plugins-2.4.1.ebuild:
+  x86 stable wrt bug #396359
 
 *kipi-plugins-2.5.0 (03 Jan 2012)
 
