--- a/media-sound/alsaplayer/ChangeLog
+++ b/media-sound/alsaplayer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/alsaplayer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/alsaplayer/ChangeLog,v 1.76 2012/01/09 16:56:05 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/alsaplayer/ChangeLog,v 1.77 2012/01/09 18:36:12 ago Exp $
+
+  09 Jan 2012; Agostino Sarubbo <ago@gentoo.org> alsaplayer-0.99.81.ebuild:
+  Stable for AMD64, wrt bug #398271
 
   09 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
   alsaplayer-0.99.81.ebuild:
