--- a/media-sound/mp3blaster/ChangeLog
+++ b/media-sound/mp3blaster/ChangeLog
@@ -1,11 +1,11 @@
 # ChangeLog for media-sound/mp3blaster
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mp3blaster/ChangeLog,v 1.53 2012/01/09 18:33:54 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mp3blaster/ChangeLog,v 1.54 2012/01/09 18:44:24 ssuominen Exp $
 
   09 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
   mp3blaster-3.2.5-r1.ebuild:
-  Move /usr/share/mp3blaster/charmap/README to default documentation directory
-  as README.charmap
+  Move all documentation except commands.txt to the default documentation
+  directory; commands.txt is used at runtime (by src/main.cc)
 
 *mp3blaster-3.2.5-r1 (09 Jan 2012)
 
