--- a/media-sound/mp3blaster/ChangeLog
+++ b/media-sound/mp3blaster/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/mp3blaster
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mp3blaster/ChangeLog,v 1.54 2012/01/09 18:44:24 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mp3blaster/ChangeLog,v 1.55 2012/01/09 18:47:03 ssuominen Exp $
+
+  09 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
+  mp3blaster-3.2.5-r1.ebuild:
+  Install missing mp3tag(1) manpage.
 
   09 Jan 2012; Samuli Suominen <ssuominen@gentoo.org>
   mp3blaster-3.2.5-r1.ebuild:
