--- a/media-libs/sdl-gfx/ChangeLog
+++ b/media-libs/sdl-gfx/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/sdl-gfx
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/sdl-gfx/ChangeLog,v 1.81 2012/01/07 11:23:43 ago Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/sdl-gfx/ChangeLog,v 1.82 2012/01/10 20:14:36 ranger Exp $
+
+  09 Jan 2012; Brent Baude <ranger@gentoo.org> sdl-gfx-2.0.23.ebuild:
+  Marking sdl-gfx-2.0.23 ppc for bug 397689
 
   07 Jan 2012; Agostino Sarubbo <ago@gentoo.org> sdl-gfx-2.0.23.ebuild:
   Stable for AMD64, wrt bug #397689
