--- a/media-plugins/vdr-xine/ChangeLog
+++ b/media-plugins/vdr-xine/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-plugins/vdr-xine
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-xine/ChangeLog,v 1.1 2012/01/10 14:30:02 idl0r Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-plugins/cvs-repo/gentoo-x86/media-plugins/vdr-xine/ChangeLog,v 1.2 2012/01/10 21:50:41 idl0r Exp $
+
+  10 Jan 2012; Christian Ruppert <idl0r@gentoo.org> vdr-xine-0.9.4.ebuild:
+  Install MANUAL
 
 *vdr-xine-0.9.4 (10 Jan 2012)
 
