--- a/mail-client/thunderbird/ChangeLog
+++ b/mail-client/thunderbird/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for mail-client/thunderbird
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/thunderbird/ChangeLog,v 1.115 2012/01/10 22:21:23 polynomial-c Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/thunderbird/ChangeLog,v 1.116 2012/01/10 23:38:06 polynomial-c Exp $
+
+  10 Jan 2012; Lars Wendler <polynomial-c@gentoo.org> thunderbird-9.0.ebuild:
+  Another bunch of dependency adjustments.
 
   10 Jan 2012; Lars Wendler <polynomial-c@gentoo.org> thunderbird-9.0.ebuild:
   Adjusted dependencies.
